--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> Institution
+									Postdoc Researcher <br> Lawrence Berkeley National Laboratory
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
